--- a/src/components/Appointments/index.css
+++ b/src/components/Appointments/index.css
@@ -117,6 +117,10 @@ button.stared-btn {
 }
 
 @media (min-width: 768px) {
+  .appointments-app {
+    width: 62%;
+  }
+
   .col-6 {
     width: 50%;
   }
